--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.5",
-    "rle-decoder": "^0.0.3"
+    "mongoose": "^6.1.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
