--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "devstart": "nodemon index.js"
   },
   "dependencies": {
+    "debug": "^4.3.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "helmet": "^5.0.1",
+    "http-errors": "^2.0.0",
     "mongoose": "^6.1.5"
   },
   "devDependencies": {
