--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devstart": "nodemon index.js"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "debug": "^4.3.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
