--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-validator": "^6.14.0",
     "helmet": "^5.0.1",
     "http-errors": "^2.0.0",
-    "mongoose": "^6.1.5"
+    "mongoose": "^6.1.5",
+    "rle-decoder": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
