--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "author": "timjacksonm",
   "license": "ISC",
   "scripts": {
-    "start": "node index.js",
-    "devstart": "nodemon index.js"
+    "devstart": "nodemon src/index.ts"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -20,9 +19,16 @@
     "helmet": "^6.0.0",
     "http-errors": "^2.0.0",
     "mongoose": "^6.6.5",
-    "rle-decoder": "^1.0.1"
+    "rle-decoder": "^1.0.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/compression": "^1.7.2",
+    "@types/debug": "^4.1.7",
+    "@types/express": "^4.17.14",
+    "@types/express-validator": "^3.0.0",
+    "@types/http-errors": "^1.8.2",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.8.4"
   }
 }
