--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
@@ -19,15 +20,18 @@
     "helmet": "^6.0.0",
     "http-errors": "^2.0.0",
     "mongoose": "^6.6.5",
+    "morgan": "^1.10.0",
     "rle-decoder": "^1.0.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.14",
     "@types/express-validator": "^3.0.0",
     "@types/http-errors": "^1.8.2",
+    "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
   }
