--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "timjacksonm",
   "license": "ISC",
   "scripts": {
-    "devstart": "nodemon src/index.ts"
+    "start": "tsc && node dist/index.js",
+    "devstart": "DEBUG=app:*,routes:* nodemon src/index.ts"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.14",
     "@types/express-validator": "^3.0.0",
     "@types/http-errors": "^1.8.2",
+    "@types/mongodb": "^4.0.7",
     "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
