--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "timjacksonm",
   "license": "ISC",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "start": "node dist/index.js",
+    "build": "tsc",
     "devstart": "DEBUG=app:*,routes:* nodemon src/index.ts"
   },
   "dependencies": {
