--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "devstart": "set DEBUG=app:*,routes:* && nodemon src/index.ts"
+    "dev": "set DEBUG=app:*,routes:* && nodemon src/index.ts"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.1",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.1",
     "http-errors": "^2.0.0",
