--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "http-errors": "^2.0.0",
     "mongoose": "7.4.0",
     "morgan": "^1.10.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
@@ -35,7 +36,6 @@
     "@types/http-errors": "^2.0.1",
     "@types/mongodb": "^4.0.7",
     "@types/morgan": "^1.9.3",
-    "nodemon": "^3.0.1",
-    "typescript": "^5.1.6"
+    "nodemon": "^3.0.1"
   }
 }
