--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   "license": "ISC",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc",
-    "dev": "set DEBUG=app:*,routes:* && nodemon src/index.ts"
+    "build": "npm run lint && tsc",
+    "dev": "set DEBUG=app:*,routes:* && nodemon src/index.ts",
+    "lint": "eslint . --ext .ts",
+    "lint:quiet": "npm run lint -- --quiet",
+    "lint:fix": "npm run lint -- --fix",
+    "typecheck": "tsc --noEmit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -18,6 +23,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^6.9.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
@@ -36,6 +42,14 @@
     "@types/http-errors": "^2.0.1",
     "@types/mongodb": "^4.0.7",
     "@types/morgan": "^1.9.3",
-    "nodemon": "^3.0.1"
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "husky": "^8.0.3",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.3"
   }
 }
